fix mobile overflow

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -313,6 +313,7 @@ html
 
   header h2{
   	font-size: 10px;
+  	margin: 0;
   	//margin-right: 30px;
   	float: none;
   }
@@ -327,9 +328,20 @@ html
     -webkit-filter: blur(5px);
   }
 
+  #AboutMe section{
+
+  	p{
+  		font-size: 12px;
+
+	}
+}
+
   #Intro {
   	top: 5%;
   	margin-top: 35%;
+  	margin-left: 0;
+  	padding: 0;
+  	padding-left: 60px;
 
   }
 
@@ -343,7 +355,10 @@ html
 
 
   #Intro p {
-  	display: none;
+  	//display: none;
+  	font-size: 12px;
+  	width: 50%;
+  	padding-left: 100px;
   }
 
   .grid-3 {
@@ -354,6 +369,13 @@ html
     border-bottom: #333 dashed 1px;
     padding: 1.2rem 1rem;
   }
+
+
+ .experience p{
+
+ 	font-size: 12px;
+}
+
 }
 
 @media (max-height: 500px) {
